# libchewing

./: .travis.yml  AUTHORS  CMakeLists.txt  Makefile  Makefile.am  NEWS  README.md  chewing.pc.in  config.status  configure.ac  libtaigi.spec.in  taigi.pc
cmake/: version.texi.in
contrib/: Makefile  simple-select.c
contrib/python/: taigi.py  test.py
data/: Makefile  Makefile.am  add-lomaji.py  create-tsi.py  phone.cin  taigi.cin  taigime.txt  tailo.cin  test.py  tsi.src
include/: chewing-compat.h  chewingio.h  global.h  mod_aux.h  taigi-compat.h  taigi.h  taigiio.h
include/internal/: bopomofo-private.h  chewing-private.h  chewingutil.h  dict-private.h  hash-private.h  key2pho-private.h  memory-private.h  pinyin-private.h  taigi-private.h  taigi-sql.h  (+4 more)
src/: Makefile  Makefile.am  bopomofo.c  chewing-sql.c  chewingio.c  chewingutil.c  choice.c  compat.c  dict.c  hash.c  lomaji.c  mod_aux.c  private.h  taigi-sql.c  taigiio.c  taigiutil.c  tree.c  userphrase-hash.c  userphrase-sql.c  userphrase.c
src/common/: Makefile.am  key2pho.c  taigi-utf8-util.c
src/porting_layer/src/: Makefile.am  plat_path.c
src/tools/: Makefile.am  dump_database.c  init_database.c
test/: Makefile  Makefile.am  genkeystroke.c  performance.c  randkeystroke.c  simulate.c  stress.c  test-bopomofo.c  test-config.c  test-easy-symbol.c  test-error-handling.c  test-fullshape.c  test-key2pho.c  test-keyboard.c  test-keyboardless.c  test-logger.c  test-regression.c  test-reset.c  test-special-symbol.c  test-symbol.c  test-userphrase.c  test-utf8.c  testchewing.c  testhelper.c  testhelper.h
